--- a/Java Backend/myProduct/src/main/resources/application.properties
+++ b/Java Backend/myProduct/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.servlet.context-path=/MyTeam/api
+#server.servlet.context-path=/api
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/MyTeam
@@ -12,3 +12,11 @@ logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 loggin.level.org.mycompany.myproduct.org.mycompany.myproduct.Controllers.MyBoardController =TRACE
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+
+#jwt propiedades
+app.jwt-secret=JWTSecretKey
+app.jwt-expiration-milliseconds=604800000
